Bug 1411050 Part 1: Change nsDisplayListBuilder to mark hitests either for visibility or for pointer events. r=mattwoodrow

MozReview-Commit-ID: AbYcm2gwEES